# 3DViewer

./: .gitignore  README.md
src/: -lgtest-3D_Viewer_2_test.gcno  -lgtest-vmodel.gcno  .gitignore  3D_Viewer_2_test  3D_Viewer_2_test.gcno  CMakeLists.txt  CMakeLists.txt.user.9a7c8a8  Makefile  documentation.texi  main.cc  vmodel.gcno
src/3DViewer_v1_0/: 3DViewer_v1_0.pro  info.cpp  info.h  info.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_move.cpp  mainwindow_rotate.cpp  mainwindow_screenshots.cpp  mainwindow_settings.cpp  movement_controller.cc  movement_controller.h  rotation_controller.h  widget.cpp  widget.h
src/3DViewer_v1_0/functions/: affine_transformations.c  affine_transformations.h  reading_obj_file.c  reading_obj_file.h
src/3DViewer_v1_0/functions/other/: structs.h
src/3DViewer_v1_0/gifanim/: gifanim.cpp  gifanim.h
src/controller/: controller.cc  controller.h
src/demo_models/: Bugatti.obj.REMOVED.git-id  City.obj.REMOVED.git-id  Kalashnikov.obj.REMOVED.git-id  Lion.obj.REMOVED.git-id  Mercedes_Benz_GLS_580.obj.REMOVED.git-id  tree.obj.REMOVED.git-id
src/model/: structs.h  vmodel.cc  vmodel.h
src/other/: decorator.h  documentation.texi  index.html  memento.h  structs.h
src/tests/: 3D_Viewer_2_test.cc  includes  tests.check
src/view/: mainwindow.cc  mainwindow.h  mainwindow.ui  mainwindow_scale.cc  mainwindow_screenshots.cc  mainwindow_settings.cc  movement_control.cc  movement_control.h  rotation_control.cc  rotation_control.h  scaling_control.cc  scaling_control.h  widget.cc  widget.h  widgetsettings.cc  widgetsettings.h
src/view/controls/: movement_control.cc  movement_control.h  rotation_control.cc  rotation_control.h  scaling_control.cc  scaling_control.h
src/view/gifanim/: gifanim.h
src/view/info/: info.cc  info.h  info.ui
src/view/mainwindow/: mainwindow.cc  mainwindow.h  mainwindow.ui  mainwindow_screenshots.cc  mainwindow_settings.cc
src/view/widget/: widget.cc  widget.h  widgetsettings.cc  widgetsettings.h
